--- a/JobApplicationManagement/appsettings.json
+++ b/JobApplicationManagement/appsettings.json
@@ -5,7 +5,7 @@ before the project can be successfully executed.
 For more info see https://aka.ms/dotnet-template-ms-identity-platform
 */
   "ConnectionStrings": {
-    "JobAppConnectionString": "Data Source=.;Initial Catalog=JobApplicationDB;Persist Security Info=True;User ID=sa;Password=Jamshid1390;Pooling=False"
+    "JobAppConnectionString": "Data Source=localhost;Initial Catalog=JobApplicationDb;Persist Security Info=True;User ID=sa;Password=Jamshid1390@;Pooling=False"
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
