--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,11 +15,18 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- task: UseDotNet@2
+  inputs:
+    packageType: 'sdk'
+    version: '6.0.x'
+    includePreviewVersions: true
+
 - task: NuGetToolInstaller@1
 
 - task: NuGetCommand@2
   inputs:
     restoreSolution: '$(solution)'
+
 
 - task: VSBuild@1
   inputs:
