--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,5 +16,11 @@ variables:
 steps:
 - script: dotnet build ".\JobApplicationManagement.sln" --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+- script: dotnet publish ".\JobApplicationManagement.sln" --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)
+  displayName: 'dotnet publish $(buildConfiguration)'
 
 - task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
